Добавлены вложения к файлам